# jidhom

./: .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  README.md  SECURITY.md  build.rs  clippy.toml  deno.json  justfile  podman-compose.yml  rust-toolchain.toml  rustfmt.toml  taplo.toml
.github/workflows/: lint.yml  release.yml  test.yml
control/: Cargo.toml
control/src/: cli.rs  main.rs
locales/ar/: auth.ftl  main.ftl  nav.ftl  register.ftl
locales/en/: auth.ftl  main.ftl  register.ftl
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20250714_015113_create_users_table.rs  m20250714_220820_create_sessions_table.rs  m20250813_171740_add_user_to_password_change_state.rs  main.rs
src/: app.rs  i18n.rs  lib.rs  main.rs
src/api/: Cargo.toml
src/api/src/: authentication.rs  data.rs  lib.rs  registeration.rs  utils.rs
src/components/: Cargo.toml
src/components/src/: authentication.rs  lib.rs  nav.rs  registeration.rs  utils.rs
src/db/: Cargo.toml  mod.rs
src/db/entities/: mod.rs
src/db/src/: data.rs  error.rs  lib.rs  utils.rs
src/db/src/connection/: impl_admin.rs  impl_applicant.rs  impl_interviewer.rs  impl_loggedin.rs  impl_none.rs  impl_recruitment_manager.rs  mod.rs
src/db/src/entities/: mod.rs  prelude.rs  sea_orm_active_enums.rs  session.rs  user.rs
src/db/src/secret/: hash.rs  mod.rs
src/pages/: Cargo.toml
src/pages/src/: home.rs  lib.rs  login.rs  register.rs
src/utils/: server.rs
