[package]
name = "jidhom"
version = "0.1.0-alpha.0"
authors = ["zefr0x"]
edition = "2024"
license = "AGPL-3.0-only"
homepage = "https://github.com/zefr0x/jidhom"
repository = "https://github.com/zefr0x/jidhom.git"

# TODO: Consider commented lints when they are stable.
[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "deny"
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
deref_into_dyn_supertrait = "warn"
explicit_outlives_requirements = "warn"
# fuzzy_provenance_casts = "warn"
let_underscore_drop = "warn"
# lossy_provenance_casts = "warn"
macro_use_extern_crate = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
# multiple_supertrait_upcastable = "warn"
# must_not_suspend = "warn"
non_ascii_idents = "forbid"
# non_exhaustive_omitted_patterns = "warn"
redundant_imports = "deny"
redundant_lifetimes = "warn"
# supertrait_item_shadowing_definition = "warn"
# supertrait_item_shadowing_usage = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
# unqualified_local_imports = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unstable_features = "forbid"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"

# TODO: Consider enabling more pedantic and nursery lints.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
allow_attributes = "deny"
allow_attributes_without_reason = "warn"
arbitrary_source_item_ordering = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "deny"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
deref_by_slicing = "warn"
doc_include_without_cfg = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
exit = "deny"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
host_endian_bytes = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
implicit_return = "deny"
indexing_slicing = "warn"
infinite_loop = "warn"
# TODO: Enforce assembly syntax, either `inline_asm_x86_att_syntax` or `inline_asm_x86_intel_syntax`.
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
module_name_repetitions = "warn"
# TODO: enable `multiple_inherent_impl` when it respect generic arguments.
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
negative_feature_names = "deny"
non_zero_suggestions = "warn"
pattern_type_mismatch = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_feature_names = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "deny"
semicolon_inside_block = "warn"
single_char_lifetime_names = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "deny"
wildcard_enum_match_arm = "warn"
