[package]
name = "jidhom_control"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = "4.5.46"
db = { workspace = true, features = ["admin"] }
dotenvy = { workspace = true }
secrecy = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
