[package]
name = "migration"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.88"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dependencies.sea-orm-migration]
version = "1.1.13"
features = ["sqlx-postgres", "runtime-tokio-rustls"]
