[package]
name = "migration"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.88"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dependencies.sea-orm-migration]
version = "1.1.14"
features = ["sqlx-postgres", "runtime-tokio-rustls"]

[lints]
workspace = true
