[package]
name = "components"
version = { workspace = true }
edition = { workspace = true }

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate", "leptos-fluent/hydrate"]
ssr = [
	"api/ssr",
	"leptos/ssr",
	"leptos_router/ssr",
	"leptos-fluent/ssr",
	"leptos-fluent/actix",
	"leptos-use/actix",
	"leptos-use/ssr",
]

[dependencies]
api = { workspace = true }
codee = "0.3.2"
leptos = { workspace = true }
leptos-fluent = { workspace = true }
leptos-use = { workspace = true, features = ["use_cookie", "use_clipboard", "use_preferred_dark"] }
leptos_router = { workspace = true }
phosphor-leptos = "0.8.0"
tracing = { workspace = true }

[lints]
workspace = true
