[package]
name = "db"
version = { workspace = true }
edition = { workspace = true }

[features]
admin = []

[dependencies]
argon2 = { version = "0.6.0-rc.8", default-features = false, features = [
	"alloc",
	"password-hash",
	"zeroize",
	"parallel",
] }
base64 = "0.22.1"
base64ct = { version = "1.8.3", features = ["std"] }
blake3 = { version = "1.8.5", features = ["zeroize"] }
password-hash = { version = "0.6.1", default-features = false, features = ["alloc", "phc"] }
rand = "0.10"
rayon = { workspace = true }
sea-orm = { version = "1.1.20", default-features = false, features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
	"with-time",
	"with-uuid",
] }
secrecy = { workspace = true }
thiserror = { workspace = true }
time = "0.3.49"
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-unwrap = { workspace = true }
# PERF: Consider `zerocopy` feature when it becomes stable.
uuid = { version = "1", default-features = false, features = ["rng-rand", "v4", "v7"] }

[lints]
workspace = true
