[package]
name = "pages"
version = { workspace = true }
edition = { workspace = true }

[features]
csr = ["components/csr", "leptos/csr"]
hydrate = ["components/hydrate", "leptos/hydrate", "leptos-fluent/hydrate"]
ssr = ["components/ssr", "leptos/ssr", "leptos_meta/ssr", "leptos-fluent/ssr", "leptos-fluent/actix"]

[dependencies]
components = { workspace = true }
leptos = { workspace = true }
leptos-fluent = { workspace = true }
leptos_meta = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
